# require_lifetimes

./: Cargo.toml  README.md
src/: lib.rs  type_visitor.rs
ui_tests/: all_missing_called_default_err.rs  all_missing_called_default_err.stderr  all_missing_called_empty_err.rs  all_missing_called_empty_err.stderr  all_missing_called_err.rs  all_missing_called_err.stderr  all_missing_err.rs  all_missing_err.stderr  array_missing_err.rs  array_missing_err.stderr  body_has_reference_ok.rs  output_missing_err.rs  output_missing_err.stderr  simple_ok.rs  single_anonymous_lifetime_err.rs  single_anonymous_lifetime_err.stderr  single_input_missing_err.rs  single_input_missing_err.stderr
