[package]
name = "require_lifetimes"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "require_lifetimes"
proc_macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.107", features=["full", "extra-traits", "visit"] }
proc-macro2 = "1.0.49"

[dev-dependencies]
trybuild = "1.0.74"
