[package]
name = "require_lifetimes"
version = "0.3.0"
edition = "2021"
authors = ["Tom Kunc <tom@tfpk.dev>"]
license = "MIT OR Apache-2.0"
description = "A proc-macro to force rust authors to write lifetimes in function signatures."
repository = "https://github.com/tfpk/require_lifetimes"
readme = "README.md"

[lib]
path = "src/lib.rs"
name = "require_lifetimes"
proc_macro = true

[dependencies]
syn = { version = "1.0.107", features=["full", "extra-traits", "visit"] }
quote = "1.0.12"
proc-macro2 = "1.0.49"

[dev-dependencies]
trybuild = "1.0.74"
